# kake

./: .gitignore  LICENSE  README.md  install.ps1
.github/workflows/: build.yml  build_client.yml  build_installer.yml  build_server.yml  release.yml
client/: Cargo.toml
client/src/: actions.rs  main.rs
installer/: Cargo.toml
installer/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/website/: index.html  login.html
updater/: Cargo.toml
updater/src/: main.rs
