[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
tokio-tungstenite = "0.15"
futures = "0.3"
log = "0.4"
uuid = "1.17.0"
env_logger = "0.11.8"
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }
wmi = "0.17.2"
serde = "1.0.219"
ezsockets = "0.7.0"
async-trait = "0.1.89"
