[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11.8"
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Shutdown",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Graphics_Gdi"
] }
ezsockets = "0.7.0"
async-trait = "0.1.89"

[package.metadata.winres]
windows_subsystem = "windows"
