[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.15"
serenity = "0.12.4"
rouille = "3.6.2"
futures = "0.3"
log = "0.4"
uuid = "1.17.0"
env_logger = "0.11.8"
actix-web = "4.11.0"
actix-ws = "0.3.0"
actix = "0.13.5"
